# gitpower

./: .goreleaser.yml  .releaserc.json  CHANGELOG.md  Cargo.toml  README.md
.github/: release-please-config.json
.github/workflows/: _lint.yml  ci.yml  push.yml  release.yml
src/: cli.rs  commands.rs  config.rs  git.rs  main.rs
src/commands/: init.rs  interactive.rs  list.rs  mod.rs  run.rs  status.rs  sync.rs
