[package]
name = "gitpower"
version = "0.1.0"
edition = "2024"
description = "A powerful CLI tool for managing multiple Git repositories"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PunGrumpy/gitpower"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
colored = "3.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
shellexpand = "3.1.0"
clap_complete = "4.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
